Closed
Bug 427494
Opened 17 years ago
Closed 17 years ago
In the Location field Com-Left & Right Arrow can't work
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino2.0
People
(Reporter: suishouen, Assigned: stuart.morgan+bugzilla)
Details
(Keywords: regression)
Attachments
(1 file)
|
1.61 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en; rv:1.9pre) Gecko/2008040700 Camino/2.0a1pre (like Firefox/3.0pre)
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en; rv:1.9pre) Gecko/2008040700 Camino/2.0a1pre (like Firefox/3.0pre)
In the Location field Com-Left & Right Arrow can't work.
Instead Com-Left & Right Arrow works as Go back & next page.
Reproducible: Always
Comment 2•17 years ago
|
||
That is a pretty recent regression:
works:
2.0a1pre (1.9pre 2008033100)
fails
2.0a1pre (1.9pre 2008040100)
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-03-31+00%3A00%3A00&maxdate=2008-04-01+00%3A00%3A00&cvsroot=%2Fcvsroot
Some Camino-only checkins there
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•17 years ago
|
Keywords: regression
Target Milestone: --- → Camino2.0
| Assignee | ||
Updated•17 years ago
|
Assignee: nobody → stuart.morgan
| Assignee | ||
Comment 3•17 years ago
|
||
I forgot that pKE: doesn't have anything to do with the responder chain. This makes the history binding only work when content is focused. It will semi-regress bug 405744, but only because of the pages-lose-focus-on-navigation trunk regression that's already covered by another bug.
Attachment #314087 -
Flags: superreview?(mikepinkerton)
Comment 4•17 years ago
|
||
Comment on attachment 314087 [details] [diff] [review]
fix
sr=pink
Attachment #314087 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 5•17 years ago
|
||
Landed on trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•