Camino only - Bug 427494: Only map Command-Left/Right to history when the content area is focused. r/sr=pink